--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,12 +3,19 @@
 * {
   margin: 0;
   padding: 0;
+  color: red;
   box-sizing: border-box;
+  font-size: 20px;
+  font-weight: 500;
   font-family: "Alegreya Sans", sans-serif;
 }
 
 body {
   background: #343541;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 0px
 }
 
 #app {
@@ -20,6 +27,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.p{
+  color: rgb(243, 8, 8);
+  font-size: 20px;
+  font-weight: 500;
+  margin: 10px 0;
 }
 
 #chat_container {
@@ -69,7 +83,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #5436DA;
+  background: #ffffff;
 
   display: flex;
   justify-content: center;
@@ -77,7 +91,7 @@ body {
 }
 
 .ai .profile {
-  background: #10a37f;
+  background: #ffffff;
 }
 
 .profile img {
@@ -147,4 +161,71 @@ button {
 form img {
   width: 30px;
   height: 30px;
+}
+
+::-webkit-scrollbar-track {
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+}
+
+.header {
+  overflow: hidden;
+  background-color: #2aaca3;
+  padding: 20px 10px;
+  
+}
+
+/* Style the header links */
+.header a {
+  display: flex;
+  justify-content: space-around;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+
+footer{
+  position: relative;
+  background: #2aaca3;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
+footer .bottom-details{
+  width: 100%;
+  background: #299992;
+}
+footer .bottom-details .bottom_text{
+  max-width: 1250px;
+  margin: auto;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-around;
+}
+.bottom-details .bottom_text span,
+.bottom-details .bottom_text a{
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff;
+  opacity: 0.8;
+  text-decoration: none;
+}
+.bottom-details .bottom_text a:hover{
+  opacity: 1;
+  text-decoration: underline;
+}
+.bottom-details .bottom_text a{
+  margin-right: 10px;
 }
